--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
 
   <div class="footer">
     <div class="btn">🧾 جاهز لبدء البيع اليوم</div>
-    <div class="contact">📞 اتصل الآن</div>
+    <div class="contact"><a href="tel:+962789119926" class="contact">📞 اتصل الآن</a>
+</div>
   </div>
 
 </div>
