--- a/products.html
+++ b/products.html
@@ -58,7 +58,85 @@
       <p>1.50 JOD</p>
       <button>أضف للسلة</button>
     </div>
+ <div class="product" data-name="بندورة" data-price="0.80">
+      <img src="images/بندوره.jpg" alt="بندوره">
+      <strong>بندورة</strong>
+      <p>0.80 JOD</p>
+      <button>أضف للسلة</button>
+    </div>
+     <div class="product" data-name="برتقال" data-price="0.80">
+      <img src="images/برتقال.jpg" alt="برتقال">
+      <strong>برتقال</strong>
+      <p>0.80 JOD</p>
+      <button>أضف للسلة</button>
+    </div>
+     <div class="product" data-name="بطاطا" data-price="0.80">
+      <img src="images/بطاطا.jpg" alt="بطاطا">
+      <strong>بطاط</strong>
+      <p>0.80 JOD</p>
+      <button>أضف للسلة</button>
+    </div>
+     <div class="product" data-name="بصل" data-price="0.80">
+      <img src="images/بصل.jpg" alt="بصل">
+      <strong>بصل</strong>
+      <p>0.80 JOD</p>
+      <button>أضف للسلة</button>
+    </div>
+     <div class="product" data-name="جزر" data-price="0.80">
+      <img src="images/جزر.jpg" alt="جزر">
+      <strong>جزر</strong>
+      <p>0.80 JOD</p>
+      <button>أضف للسلة</button>
+    </div>
+     <div class="product" data-name="ثوم" data-price="0.80">
+      <img src="images/ثوم.jpg" alt="ثوم">
+      <strong>ثوم</strong>
+      <p>0.80 JOD</p>
+      <button>أضف للسلة</button>
+    </div>
 
+     <div class="product" data-name="كيوي" data-price="0.80">
+      <img src="images/كيوي.jpg" alt="كيوي">
+      <strong>كيوي</strong>
+      <p>0.80 JOD</p>
+      <button>أضف للسلة</button>
+    </div>
+     <div class="product" data-name="فروله" data-price="0.80">
+      <img src="images/فروله.jpg" alt="فروله">
+      <strong>فروله</strong>
+      <p>0.80 JOD</p>
+      <button>أضف للسلة</button>
+    </div>
+     <div class="product" data-name="بطاطحلوه" data-price="0.80">
+      <img src="images/بطاطحلوه.jpg" alt="بطاطا حلوه">
+      <strong>بطاطا حلوه</strong>
+      <p>0.80 JOD</p>
+      <button>أضف للسلة</button>
+    </div>
+     <div class="product" data-name="كرفس" data-price="0.80">
+      <img src="images/كرفس.jpg" alt="كرفس">
+      <strong>كرفس</strong>
+      <p>0.80 JOD</p>
+      <button>أضف للسلة</button>
+    </div>
+     <div class="product" data-name="منجا" data-price="0.80">
+      <img src="images/منجا.jpg" alt="منجا">
+      <strong>منجا</strong>
+      <p>0.80 JOD</p>
+      <button>أضف للسلة</button>
+    </div>
+     <div class="product" data-name="زهره" data-price="0.80">
+      <img src="images/زهره.jpg" alt="زهره">
+      <strong>زهره</strong>
+      <p>0.80 JOD</p>
+      <button>أضف للسلة</button>
+    </div>
+     <div class="product" data-name="بندورة" data-price="0.80">
+      <img src="images/بيتنجان.jpg" alt="بيتنجان">
+      <strong>بيتنجان</strong>
+      <p>0.80 JOD</p>
+      <button>أضف للسلة</button>
+    </div>
   </div>
 
   <!-- سلة التسوق -->
