--- a/products.html
+++ b/products.html
@@ -131,6 +131,12 @@
       <p>0.80 JOD</p>
       <button>أضف للسلة</button>
     </div>
+     <div class="product" data-name="ليمون" data-price="0.80">
+      <img src="images/ليمون.jpg" alt="ليمون">
+      <strong>ليمون</strong>
+      <p>0.80 JOD</p>
+      <button>أضف للسلة</button>
+    </div>
      <div class="product" data-name="بندورة" data-price="0.80">
       <img src="images/بيتنجان.jpg" alt="بيتنجان">
       <strong>بيتنجان</strong>
