--- a/products.html
+++ b/products.html
@@ -18,6 +18,22 @@
     .product button{ background:#4caf50; color:#fff; border:none; padding:8px 15px; border-radius:20px; margin-top:10px; cursor:pointer }
     .back{ display:inline-block; margin-bottom:25px; background:#ff8c1a; color:#fff; padding:10px 25px; border-radius:25px; text-decoration:none }
     .cart{ margin-top:20px; padding:15px; background:#f6fff7; border-radius:10px; color:#333; font-weight:bold; text-align:center; cursor:pointer }
+    .payments{
+  margin-top:15px;
+  display:flex;
+  gap:15px;
+  justify-content:center;
+}
+
+.pay{
+  background:#ffffff;
+  color:#333;
+  padding:15px 25px;
+  border-radius:20px;
+  cursor:pointer;
+  font-weight:bold;
+}
+
   </style>
 </head>
 
@@ -151,6 +167,10 @@
   </div>
 
 </div>
+<div class="payments">
+  <div id="cod" class="pay">💵 الدفع عند الاستلام</div>
+  <div id="wallet" class="pay">💳 الدفع الإلكتروني</div>
+</div>
 
 <script>
 document.addEventListener("DOMContentLoaded", function() {
@@ -276,6 +296,62 @@ document.addEventListener("DOMContentLoaded", function() {
 
 });
 </script>
+  <script>
+document.addEventListener("DOMContentLoaded", function () {
+
+  const cod = document.getElementById("cod");
+  const wallet = document.getElementById("wallet");
+
+  const phone = "962789119926";
+
+  if (cod) {
+    cod.addEventListener("click", function () {
+      const total = document.getElementById("cartTotal").textContent;
+      const count = document.getElementById("cartCount").textContent;
+
+      if (parseFloat(total) === 0) {
+        alert("⚠️ السلة فارغة");
+        return;
+      }
+
+      const msg =
+`🛒 طلب جديد
+💵 الدفع عند الاستلام
+🧾 عدد المنتجات: ${count}
+💰 المجموع: ${total} JOD`;
+
+      window.open("https://wa.me/" + phone + "?text=" + encodeURIComponent(msg), "_blank");
+    });
+  }
+
+  if (wallet) {
+    wallet.addEventListener("click", function () {
+      const total = document.getElementById("cartTotal").textContent;
+      const count = document.getElementById("cartCount").textContent;
+
+      if (parseFloat(total) === 0) {
+        alert("⚠️ السلة فارغة");
+        return;
+      }
+
+      const msg =
+`💳 طلب دفع إلكتروني
+🧾 عدد المنتجات: ${count}
+💰 المجموع: ${total} JOD
+
+المحافظ:
+1️⃣ فواتيركم
+2️⃣ دينارك
+3️⃣ Orange Money
+4️⃣ Umniah Wallet`;
+
+      window.open("https://wa.me/" + phone + "?text=" + encodeURIComponent(msg), "_blank");
+    });
+  }
+
+});
+</script>
+
 
 </body>
 </html>
