--- a/products.html
+++ b/products.html
@@ -33,6 +33,68 @@
   cursor:pointer;
   font-weight:bold;
 }
+.cart{cursor:pointer}
+
+.modal{
+  display:none;
+  position:fixed;
+  top:0; left:0;
+  width:100%; height:100%;
+  background:rgba(0,0,0,.6);
+  z-index:1000;
+}
+
+.modal-content{
+  background:#fff;
+  color:#333;
+  max-width:400px;
+  margin:60px auto;
+  padding:20px;
+  border-radius:15px;
+}
+
+.cart-item{
+  display:flex;
+  align-items:center;
+  margin-bottom:10px;
+}
+
+.cart-item img{
+  width:40px;
+  height:40px;
+  border-radius:8px;
+  margin-left:10px;
+}
+
+.cart-item button{
+  margin-right:auto;
+  background:red;
+  color:#fff;
+  border:none;
+  border-radius:10px;
+  padding:5px 10px;
+  cursor:pointer;
+}
+
+.payments{
+  display:flex;
+  gap:10px;
+  justify-content:center;
+  margin-top:15px;
+}
+
+.pay{
+  background:#0b5fa5;
+  color:#fff;
+  padding:10px 15px;
+  border-radius:15px;
+  cursor:pointer;
+}
+
+.close{
+  margin-top:15px;
+  width:100%;
+}
 
   </style>
 </head>
@@ -170,6 +232,22 @@
 <div class="payments">
   <div id="cod" class="pay">💵 الدفع عند الاستلام</div>
   <div id="wallet" class="pay">💳 الدفع الإلكتروني</div>
+</div>
+<div id="cartModal" class="modal">
+  <div class="modal-content">
+    <h3>🧺 محتويات السلة</h3>
+
+    <div id="cartItems"></div>
+
+    <p class="total">💰 المجموع: <span id="modalTotal">0.00</span> JOD</p>
+
+    <div class="payments">
+      <div onclick="payCOD()" class="pay">💵 الدفع عند الاستلام</div>
+      <div onclick="payOnline()" class="pay">💳 الدفع الإلكتروني</div>
+    </div>
+
+    <button class="close" onclick="closeCart()">إغلاق</button>
+  </div>
 </div>
 
 <script>
@@ -350,8 +428,73 @@ document.addEventListener("DOMContentLoaded", function () {
   }
 
 });
+    
 </script>
 
+<script>
+let cart = [];
+
+function addToCart(name, price, img){
+  cart.push({name, price, img});
+  updateCart();
+}
+
+function updateCart(){
+  document.getElementById("cartCount").textContent = cart.length;
+  const total = cart.reduce((s,i)=>s+i.price,0);
+  document.getElementById("cartTotal").textContent = total.toFixed(2);
+}
+
+function openCart(){
+  const itemsDiv = document.getElementById("cartItems");
+  itemsDiv.innerHTML = "";
+
+  cart.forEach((item,index)=>{
+    itemsDiv.innerHTML += `
+      <div class="cart-item">
+        <img src="${item.img}">
+        <span>${item.name} - ${item.price} JOD</span>
+        <button onclick="removeItem(${index})">✖</button>
+      </div>
+    `;
+  });
+
+  document.getElementById("modalTotal").textContent =
+    cart.reduce((s,i)=>s+i.price,0).toFixed(2);
+
+  document.getElementById("cartModal").style.display="block";
+}
+
+function closeCart(){
+  document.getElementById("cartModal").style.display="none";
+}
+
+function removeItem(index){
+  cart.splice(index,1);
+  updateCart();
+  openCart();
+}
+
+const phone = "962789119926";
+
+function payCOD(){
+  if(cart.length===0) return alert("السلة فارغة");
+  sendOrder("💵 الدفع عند الاستلام");
+}
+
+function payOnline(){
+  if(cart.length===0) return alert("السلة فارغة");
+  sendOrder("💳 الدفع الإلكتروني");
+}
+
+function sendOrder(method){
+  let msg = `🛒 طلب جديد\n${method}\n\n`;
+  cart.forEach(i=> msg += `- ${i.name} (${i.price} JOD)\n`);
+  msg += `\n💰 المجموع: ${cart.reduce((s,i)=>s+i.price,0)} JOD`;
+
+  window.open("https://wa.me/"+phone+"?text="+encodeURIComponent(msg));
+}
+</script>
 
 </body>
 </html>
