--- a/products.html
+++ b/products.html
@@ -224,9 +224,11 @@
   </div>
 
   <!-- سلة التسوق -->
-  <div class="cart">
-    🛒 عدد المنتجات: <span id="cartCount">0</span> | المجموع: <span id="cartTotal">0.00</span> JOD
-  </div>
+  <div class="cart" onclick="openCart()">
+  🛒 عدد المنتجات: <span id="cartCount">0</span> |
+  المجموع: <span id="cartTotal">0.00</span> JOD
+</div>
+
 
 </div>
 <div class="payments">
