--- a/products.html
+++ b/products.html
@@ -113,46 +113,53 @@
       <img src="images/بندوره.jpg" alt="بندوره">
       <strong>بندورة</strong>
       <p>0.80 JOD</p>
-      <button>أضف للسلة</button>
+     <button onclick="addToCart('بندوره', 2.5, 'images/بندوره.jpg')">أضف للسلة</button>
+
     </div>
 
     <div class="product" data-name="خيار" data-price="0.75">
       <img src="images/خيار.jpg" alt="خيار">
       <strong>خيار</strong>
       <p>0.75 JOD</p>
-      <button>أضف للسلة</button>
+      <button onclick="addToCart('خيار', 2.5, 'images/خيار.jpg')">أضف للسلة</button>
+
     </div>
 
     <div class="product" data-name="تفاح" data-price="1.20">
       <img src="images/تفاح.jpg" alt="تفاح">
       <strong>تفاح</strong>
       <p>1.20 JOD</p>
-      <button>أضف للسلة</button>
+      <button onclick="addToCart('تفاح', 2.5, 'images/تفاح.jpg')">أضف للسلة</button>
+
     </div>
 
     <div class="product" data-name="موز" data-price="1.50">
       <img src="images/موز.jpg" alt="موز">
       <strong>موز</strong>
       <p>1.50 JOD</p>
-      <button>أضف للسلة</button>
+    <button onclick="addToCart('موز', 2.5, 'images/موز.jpg')">أضف للسلة</button>
+
     </div>
  <div class="product" data-name="بندورة" data-price="0.80">
       <img src="images/بندوره.jpg" alt="بندوره">
       <strong>بندورة</strong>
       <p>0.80 JOD</p>
-      <button>أضف للسلة</button>
+    <button onclick="addToCart('بندوره', 2.5, 'images/بندوره.jpg')">أضف للسلة</button>
+
     </div>
      <div class="product" data-name="برتقال" data-price="0.80">
       <img src="images/برتقال.jpg" alt="برتقال">
       <strong>برتقال</strong>
       <p>0.80 JOD</p>
-      <button>أضف للسلة</button>
+    <button onclick="addToCart('برتقال', 2.5, 'images/برتقال.jpg')">أضف للسلة</button>
+
     </div>
      <div class="product" data-name="بطاطا" data-price="0.80">
       <img src="images/بطاطا.jpg" alt="بطاطا">
       <strong>بطاط</strong>
       <p>0.80 JOD</p>
-      <button>أضف للسلة</button>
+     <button onclick="addToCart('بطاطا', 2.5, 'images/بطاطا.jpg')">أضف للسلة</button>
+
     </div>
      <div class="product" data-name="بصل" data-price="0.80">
       <img src="images/بصل.jpg" alt="بصل">
@@ -164,62 +171,72 @@
       <img src="images/جزر.jpg" alt="جزر">
       <strong>جزر</strong>
       <p>0.80 JOD</p>
-      <button>أضف للسلة</button>
+    <button onclick="addToCart('جزر', 2.5, 'images/جزر.jpg')">أضف للسلة</button>
+
     </div>
      <div class="product" data-name="ثوم" data-price="0.80">
       <img src="images/ثوم.jpg" alt="ثوم">
       <strong>ثوم</strong>
       <p>0.80 JOD</p>
-      <button>أضف للسلة</button>
+   <button onclick="addToCart('ثوم', 2.5, 'images/ثوم.jpg')">أضف للسلة</button>
+
     </div>
 
      <div class="product" data-name="كيوي" data-price="0.80">
       <img src="images/كيوي.jpg" alt="كيوي">
       <strong>كيوي</strong>
       <p>0.80 JOD</p>
-      <button>أضف للسلة</button>
+   <button onclick="addToCart('كيوي', 2.5, 'images/كيوي.jpg')">أضف للسلة</button>
+
     </div>
      <div class="product" data-name="فروله" data-price="0.80">
       <img src="images/فروله.jpg" alt="فروله">
       <strong>فروله</strong>
       <p>0.80 JOD</p>
-      <button>أضف للسلة</button>
+   <button onclick="addToCart('فروله', 2.5, 'images/فروله.jpg')">أضف للسلة</button>
+
     </div>
      <div class="product" data-name="بطاطحلوه" data-price="0.80">
       <img src="images/بطاطحلوه.jpg" alt="بطاطا حلوه">
       <strong>بطاطا حلوه</strong>
       <p>0.80 JOD</p>
-      <button>أضف للسلة</button>
+   <button onclick="addToCart('بطاطا حلوه', 2.5, 'images/بطاطحلوه.jpg')">أضف للسلة</button>
+
     </div>
      <div class="product" data-name="كرفس" data-price="0.80">
       <img src="images/كرفس.jpg" alt="كرفس">
       <strong>كرفس</strong>
       <p>0.80 JOD</p>
-      <button>أضف للسلة</button>
+      <button onclick="addToCart('كرفس', 2.5, 'images/كرفس.jpg')">أضف للسلة</button>
+
     </div>
      <div class="product" data-name="منجا" data-price="0.80">
       <img src="images/منجا.jpg" alt="منجا">
       <strong>منجا</strong>
       <p>0.80 JOD</p>
-      <button>أضف للسلة</button>
+     <button onclick="addToCart('منجا', 2.5, 'images/منجا.jpg')">أضف للسلة</button>
+
     </div>
      <div class="product" data-name="زهره" data-price="0.80">
       <img src="images/زهره.jpg" alt="زهره">
       <strong>زهره</strong>
       <p>0.80 JOD</p>
-      <button>أضف للسلة</button>
+    <button onclick="addToCart('زهره', 2.5, 'images/زهره.jpg')">أضف للسلة</button>
+
     </div>
      <div class="product" data-name="ليمون" data-price="0.80">
       <img src="images/ليمون.jpg" alt="ليمون">
       <strong>ليمون</strong>
       <p>0.80 JOD</p>
-      <button>أضف للسلة</button>
+    <button onclick="addToCart('ليمون', 2.5, 'images/ليمون.jpg')">أضف للسلة</button>
+
     </div>
-     <div class="product" data-name="بندورة" data-price="0.80">
+     <div class="product" data-name="بيتنجان" data-price="0.80">
       <img src="images/بيتنجان.jpg" alt="بيتنجان">
       <strong>بيتنجان</strong>
       <p>0.80 JOD</p>
-      <button>أضف للسلة</button>
+    <button onclick="addToCart('بيتنجان', 2.5, 'images/بيتنجان.jpg')">أضف للسلة</button>
+
     </div>
   </div>
 
