--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
       <div class="card">
         <h3>لوحة تحكم كاملة</h3>
         <p>إدارة الطلبات، المنتجات، والتقارير اليومية بسهولة</p>
+        <!-- ضع هذا داخل body -->
+<iframe src="dashboard.html" width="100%" height="600px" style="border:none;"></iframe>
+
       </div>
     </div>
   </div>
