--- a/index.html
+++ b/index.html
@@ -39,22 +39,33 @@
   </style>
 </head>
 <body>
-<div class="container">
 
-  <div class="logo">
-    <h1>🛒 متجر للخضار والفواكه</h1>
-  </div>
+  <!-- القسم العلوي -->
+  <section class="hero">
 
-  <div class="hero">
-    <h2>أسواق دير العسل للخضار والفواكه</h2>
+    <!-- صور الزوايا -->
+    <img src="left.png" class="corner-img left" alt="">
+    <img src="right.png" class="corner-img right" alt="">
+
+    <h3 class="subtitle">🛒 متجر للخضار والفواكه</h3>
+    <h1 class="title">أسواق دير العسل للخضار والفواكه</h1>
+
     <div class="features">
-      <div class="feature">💻 موقع احترافي</div>
-      <div class="feature">⚙️ لوحة تحكم</div>
-      <div class="feature">🚚 توصيل</div>
-      <div class="feature">💵 دفع عند الاستلام</div>
+      <span>💻 موقع احترافي</span>
+      <span>⚙️ لوحة تحكم</span>
+      <span>🚚 توصيل</span>
+      <span>💵 دفع عند الاستلام</span>
     </div>
-    <a href="#products" class="cta">🛍️ اطلب بكل سهولة</a>
-  </div>
+
+  </section>
+
+  <!-- الفاصل الأخضر -->
+  <div class="divider"></div>
+
+  <!-- باقي الصفحة -->
+  <section class="content">
+    <button class="cta">🛍️ اطلب بكل سهولة</button>
+  </section>
 
   <div class="section">
     <div class="grid">
